--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,8 +6,6 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -122,4 +120,15 @@
   .hoverEffect {
     @apply transition-all ease-in-out duration-300  cursor-pointer;
   }
+}
+
+/* Our FOnt Setup */
+
+
+:root {
+  --font-railway: "Raleway", sans-serif;
+}
+
+body {
+  font-family: var(--font-raleway);
 }
